--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=imagine
-spring.datasource.url=jdbc:mysql://mysql_container:3306/imagine
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.url=jdbc:mysql://mysql_container:3306/imagine
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=dbrkd0316*
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# Flask ??? URL
-flask.server.url=http://localhost:5001
 
 server.port=8080
 server.address=0.0.0.0
