--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=DarakBang
+#service
+#spring.datasource.url=${SERVICE_DB_URL}
+#local
+spring.datasource.url=${LOCAL_DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=${SERVER_PORT}
+server.address=0.0.0.0
+
+jwt_secret=${JWT_SECRET}
+
+logging.level.org.springframework.security=DEBUG
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
